--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -21,6 +21,7 @@ header {
         @include mixin.flex ($justify: flex-end);
         width: 100%;
         height: 50%;
+        z-index: 2;
 
         ul {
             @include mixin.flex ;
