--- a/assets/scss/responsive/_mobile.scss
+++ b/assets/scss/responsive/_mobile.scss
@@ -32,11 +32,8 @@
                 padding-top: .5rem;
             }
 
-            .burger_wrapper {
-                position: static;
-                top: auto;
-                left: auto;
-            }
+            
+            
         }
 
         /////////////////////////// LEARN
