--- a/assets/scss/responsive/_tablet.scss
+++ b/assets/scss/responsive/_tablet.scss
@@ -109,19 +109,19 @@
     /////////////////////////// HEADER
 
     header nav {
-        position: relative;
 
         ul {
             display: none;
+            position: absolute;
+            top: 100%;
+            right: 20%;
         }
     }
 
     header {
         .burger_wrapper {
-            position: absolute;
-            top: 0;
-            right: 0;
             padding-right: 5%;
+            position: relative;
 
             .fa-bars {
                 display: revert;
@@ -137,10 +137,11 @@
             flex-direction: column;
             align-items: center;
             cursor: pointer;
-            background-color: rgb(255, 127, 80, 0.5);
+            background-color: rgb(223, 191, 179);
             padding: 1rem;
             margin: .3rem;
             border-radius: 20px;
+        
         }
     }
 
@@ -189,6 +190,10 @@
             }
         }
     }
+
+    /////////////////////////// FEATURES
+
+    
 
     /////////////////////////// FEATURES
     
