--- a/assets/scss/sections/_learn.scss
+++ b/assets/scss/sections/_learn.scss
@@ -24,6 +24,7 @@
 
             h2 {
                 @include mixin.h2 (white);
+                overflow: hidden;
 
                 span:first-child {
                     display: inline-block;
